tests/check/undefined_var.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ void foo(f32 [M, N] i, int x) {
}

__co__ void bar() {
  x = M + 5;
  println(x);
}

int main() {
  bar();
}

// CHECK: error: symbol `M' is used before declaration.
